농업 혁명 키워드 나열

--- a/summaries/sapiens/02-농업혁명.md
+++ b/summaries/sapiens/02-농업혁명.md
@@ -8,9 +8,60 @@
 그럼에도 불구하고 인류는 왜 굳이 농사를 짓기 시작했을까?
 
 
+# 키워드 및 내용 정리 중
+인류는 마지막 빙하기(약 1만 5천년전)가 끝난 시점에 땅이 비옥해지고 해수면이 상승하면서 농사를 우연히 발견하게 되었다. 
+기원전 9000 ~ 3500 사이에 작물화 했던 밀, 쌀 등이 여전히 우리의 주식이다. 농업은 한 곳 에서 발현되어 퍼졌다기 보단 세계 여러지역에서 독자적으로 생겨났다.
+
+호주, 알래스카 같은 특정 지역에서 농업혁명이 일어나지 않은 이유는 이 지역의 동식물군이 작물화, 가축화에 맞지 않기 때문이다.
+
+인간 DNA에는 농사를 잘 지을 수 있는 정보는 없다. 밀과 쌀이 인간을 길들였다고 봐야 한다.
+
+농사로 인해 각 개인이 이득을 본 거라기 보단 유전적으로 사피엔스라는 종 관점에서 보았을 때, 이 종이 널리 퍼뜨려 진 것이 성공적인 진화라 볼 수 있다. 유전자는 자기 자신을 복제하여 더 많아지고 퍼지는 것을 성공적인 진화로 본다.
+인간은 사피엔스종의 진화를 기대하고 개인의 삶의 질을 포기하는 것을 원하진 않았을 것이다.
+결국 인류는 농사를 발견함으로서 더 많이 일하게 되고 더 힘들게 살게 되었다. 
+이러한 선택은 미래를 예견하여 결정한 것은 아니다. 사람들은 자신의 결정이 가져올 결과를 전체적으로 파악하는 능력을 가지고 있지 않았다.
+
+좀 더 쉬운 삶을 추구한 결과과 노예 같은 노동을 하는 농부가 되어 버린 것이다.
+
+역사의 철칙 : 사치품은 필수품이 되고 새로운 의무를 낳는 경향이 있다. 그리고 사치에 길들여지면 당연한 것으로 받아들이고, 외존하게 된다. 과거로 돌아갈 수 없다.
+
+농업 혁명은 마치 실패한 것처럼 보이지만 어쩔 수 없이 생겨난,  필요에 의해 발생한 것이라는 견해가 있다. 그 이유는 괴베클리 유적의 발견에서 확인해 볼 수 있다.
+
+괴베클리 유적 발견 : 종교 -> 농사. 
+ 발견된 유적이 농경사회 이전에 세워진 것으로 확인되었다.
+ 종교적 구조물을 만들기 위해 노동력을 동원하고 노동력을 구하기 위해 식량이 필요하니, 농사를 지어 인간을 먹여 살렸다라는 가정을 세워볼 수 있다.
+
+가축화된 동물입장에서는 진화적으로 성공했지만, 불행한 삶을 살게되는 괴리가 있다.
+
+농사 스트레스는 막대한 영향을 미쳤다. 지배자 및 엘리트들은  농부가 생산한 잉여식량을 빼앗아 정치, 전쟁, 예술, 철학에 투자했고 기념물과 사원을 지었다.
+
+잉여식량이 모이고 수송기술이 발달하자 사람들어 모이면서 더 큰 마을, 도시가 되었다. 이 잉여식량들을 어떻게 분쟁없이 많은 사람들에게 분배하고, 합의할 수 있을까?
+합의가 되지 않는다면 식량이 많던 적던 분쟁이 일어날 수 밖에 없다.
+하지만 역사상의 전쟁과 혁명은 식량부족 때문에 일어난 것이 아니다. 공통의 신화가 반드시 필요하다. 인간들이 공통으로 믿고 있는 신화가 있어여지만 협력이 가능하다. 이 신화가 바로 종교, 민주주의, 사회중의, 돈, 법, 이데올로기 이다. 이런 공통의 신화는 믿음에 바탕을 두고 있다. 인간은 상상할 수 있는 동물이기 때문에 가능한 것이다. 그리고 이것들은 문서로서 후대에 전달된다. 우리가 이런것들을 믿는 이유는 진리여서가 아니라, 이것을 믿으면 더 효과적으로 협력하고 더 나은 사회를 만들어 낼 수 있기 때문이고 이것이 유일한 방법이다.
+
+사람들에게 공통의 신화 같은 상상의 질서를 믿게 하는 방법은 이것이 상상의 산물이라는 것을 결코 인정하지 않게 해야 한다. 그리고 철저히 교육한다. 현재의 우리는 태어나자 마자 이러한 것을 교육받는다.
+
+인류는 상상의 질서를 창조하고, 이것을 문자체계를 통해서 후대에 남겼다.
 
 
-# 인간
 
-* A
-  * A-A
+
+
+# 회사, 본부, 팀, 파트에 대입해 봐야 한다.
+
+사치와 편리를 롤백할 순 없다.
+
+농사 발견 후 급격히 인류가 변화되기 시작함.
+
+* 좋은점
+  * 잉여생산물을 얻게 됨으로써 굶어죽지는 않게 되었다.
+  * 단위면적당 생산량(칼로리)가 급격히 증가하였다.
+
+* 나쁜점
+  * 수렵채집시대에 비해 인간은 더 많은 노동을 하게 되었다.
+  * 잉여생산물을 지키기 위해 정착생활을 하게 되었다
+
+* 정착생활의 결과
+  * 집단이 커지고 제국이 발생
+  * 단위면적당 생산량이 급격히 늘어났기 때문에 잉여 생산물이 생기게 되고 이것을 지키기 위해 군대 및 계급사회가 필요하게 되었다.
+  * 정착, 계급 사회란 결국 집단적인 신용과 믿음을 바탕으로 한 무리라 볼 수 있고 이 믿음은 인간의 상상력을 통해 만들어진 것이다.
