--- a/summaries/sapiens/02-농업혁명.md
+++ b/summaries/sapiens/02-농업혁명.md
@@ -4,19 +4,18 @@
 그럼에도 불구하고 인류는 왜 굳이 농사를 짓기 시작했을까?
 
 인류는 마지막 빙하기(약 1만 5천년전)가 끝난 시점에 땅이 비옥해지고 해수면이 상승하면서 농사를 우연히 발견하게 되었다. 
-기원전 9000 ~ 3500 사이에 작물화 했던 밀, 쌀 등이 여전히 우리의 주식이다. 고대의 수렵채집인의 주식이 여전히 현세에도 이어져 내려오는 것은 꽤나 재밌는 현상이다. 현대 인간이라 할지라도 식습관과 DNA는 수렵채집인 그대로인게 아닐까?
+기원전 9000 ~ 3500 사이에 작물화 했던 밀, 쌀 등이 여전히 우리의 주식이다. ~~고대의 수렵채집인의 주식이 여전히 현세에도 이어져 내려오는 것은 꽤나 재밌는 현상이다.~~ 고대 수렵채집인의 주식이 오늘날까지 이어지고 있다는 점은 흥미로운 사실이다. 현대 인간이라 할지라도 식습관과 DNA는 수렵채집인 그대로인게 아닐까?
 농업은 한 곳 에서 발현되어 퍼졌다기 보단 세계 여러지역에서 독자적으로 생겨났다.호주, 알래스카 같은 특정 지역에서 농업혁명이 일어나지 않은 이유는 이 지역의 동식물군이 작물화, 가축화에 맞지 않기 때문이다.
 인간 DNA에는 농사를 잘 지을 수 있는 정보는 없다. 밀과 쌀이 인간을 길들였다고 봐야 한다.
 
 사피엔스라는 종 관점에서 보았을 때, 농사로 인해 각 개인이 이득을 보았다고 하기 보단 유전적으로 이 종이 널리 퍼뜨려 진 것이 진화적 성공이라 보아야 한다. 유전자는 자기 자신을 복제하여 더 많아지고 퍼지는 것을 성공적인 진화로 보기 때문이다.
 
-인간은 사피엔스종의 진화를 기대하고 개인의 삶의 질을 포기하는 것을 원하진 않았을 것이다. 인류는 의지와 상관없이 농사를 발견함으로서 더 많이 일하게 되고 더 힘들게 살게 되었다. 
-이러한 선택은 미래를 예견하여 결정한 것은 아니다. 사람들은 자신의 결정이 가져올 결과를 전체적으로 파악하는 능력을 가지고 있지 않았다. 좀 더 쉬운 삶을 추구한 결과과 노예 같은 노동을 하는 농부가 되어 버린 것이다.
+~~인간은 사피엔스종의 진화를 기대하고 개인의 삶의 질을 포기하는 것을 원하진 않았을 것이다.~~ 개인들은 자신이 속한 종의 진화를 위해 삶의 질을 포기하려고 의도하지는 않았을 것이다. 인류는 의지와 상관없이 농사를 발견함으로서 더 많이 일하게 되고 더 힘들게 살게 되었다. 
+이러한 선택은 미래를 예견하여 결정한 것은 아니다. 사람들은 자신의 결정이 가져올 결과를 전체적으로 파악하는 능력을 가지고 있지 않았다. ~~좀 더 쉬운 삶을 추구한 결과과 노예 같은 노동을 하는 농부가 되어 버린 것이다. ~~ 더 나은 삶을 추구한 선택이 오히려 고된 노동을 감수해야 하는 농경 생활로 이어진 것이다.
 
 다시 수렵채집인으로 돌아가면 되지 않느냐에 대한 반문이 있을 수 있다. 하지만 사치품은 필수품이 되고 새로운 의무를 낳는 경향이 있고, 이것이 역사의 철칙이다. 그리고 사치에 길들여지면 당연한 것으로 받아들이고, 외존하게 된다. 과거로 돌아갈 수 없다.
 
-농업 혁명은 마치 실패한 것처럼 보이지만 필요에 의해 발생한 것이라는 견해가 있다. 그 이유는 괴베클리 유적이 발견되었기 때문이다.
-기존의 학계에서는 농사가 먼저 발견되고 이로 인해 종교나 이데올로가 생겼다는 것을 정설로 보고 있었다. 하지만 괴베클리 유적의 발견으로 인해 순서가 뒤바뀌었을 가능성이 있다는 것이다. 발견된 유적은 농경사회 이전에 세워진 것으로 확인되었다. 이것은 종교적 구조물을 만들기 위해 노동력을 동원하고 노동력을 구하기 위해 식량이 필요하니, 농사를 지어 인간을 먹여 살렸다라는 가정을 세워볼 수 있다.
+농업 혁명은 마치 실패한 것처럼 보이지만 필요에 의해 발생한 것이라는 견해가 있다. ~~그 이유는 괴베클리 유적이 발견되었기 때문이다.기존의 학계에서는 농사가 먼저 발견되고 이로 인해 종교나 이데올로가 생겼다는 것을 정설로 보고 있었다. 하지만 괴베클리 유적의 발견으로 인해 순서가 뒤바뀌었을 가능성이 있다는 것이다. 발견된 유적은 농경사회 이전에 세워진 것으로 확인되었다. 이것은 종교적 구조물을 만들기 위해 노동력을 동원하고 노동력을 구하기 위해 식량이 필요하니, 농사를 지어 인간을 먹여 살렸다라는 가정을 세워볼 수 있다.~~ 이 견해는 괴베클리 테페 유적의 발견에서 실마리를 얻는다. 기존 학설과 달리, 해당 유적은 농경 이전에 건설된 것으로 추정된다. 이는 종교적 목적의 구조물을 짓기 위해 노동력이 필요했고, 그 노동력을 유지하기 위한 식량 확보가 농업의 도입으로 이어졌다는 가설을 가능하게 만든다.
 
 가축화된 동물입장에서는 진화적으로 성공했지만, 불행한 삶을 살게 되는 괴리가 있다. 예를 들어 좁은 닭장에서 사는 닭이나 도축되는 소들은 엄청난 개채수를 자랑하지만 불행하게 살거나 죽어간다.
 
